--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
+#+begin_src
 npx cherry compile src/components/my-footer.cljs
 [cherry] Compiling CLJS file: src/components/my-footer.cljs
 
@@ -133,3 +134,4 @@ Error: The "path" argument must be of type string or an instance of Buffer or UR
 }
 
 Node.js v18.20.4
+#+end_src
